attempt to fix mobile overflow

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -129,7 +129,7 @@ section {
     margin-bottom: 0px; /* Adjust as needed */
     padding: 200px 0;
     height: 100%;
-    
+    overflow-x: hidden;
 }
 
 .hero-container {
